<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/fragment_padding"
        tools:context=".ui.SettingsFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                style="@style/title"
                android:text="@string/intro"
                />

        <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"/>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:src="@drawable/logo64"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text"
                android:text="@string/intro1"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text"
                android:text="@string/intro2"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text"
                android:text="@string/intro3"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text"
                android:text="@string/intro5"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text"
                android:text="@string/intro6"
                />
    </LinearLayout>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submit"
            android:text="@string/ok"
            style="@style/text"/>
</LinearLayout>
