<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/fragment_padding"
        tools:context=".ui.MainFragment">

    <TextView
            android:id="@+id/textview_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/title"
            android:text="@string/settings"
            />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

        <Switch
                android:text="@string/active"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/active_switch"
                style="@style/switchstyle"
                />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/text"
                    android:layout_weight="0"
                    android:text="@string/tweet_interval"
                    />

            <View
                    android:layout_width="0dp"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:text="@string/tweet_interval"
                    />

            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_weight="0"
                    android:layout_height="wrap_content"
                    style="@style/switchstyle"
                    android:id="@+id/interval_spinner"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tweet_text"
                style="@style/text"
                />

        <Button
                android:layout_width="wrap_content"
                android:layout_gravity="right"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:id="@+id/submit"
                style="@style/text"
                android:text="@string/submit"/>
    </LinearLayout>
</LinearLayout>
